--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "require": {
         "php": ">=8.0",
-        "psr/container": "* 1.0.0"
+        "psr/container": "*"
     },
     "autoload": {
         "psr-4": {
